samples/_failures_safe/1761251776_d548ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29a9b183.c: In function ‘main’:
./samples/SAFE/__tmp_29a9b183.c:154:12: error: missing terminating " character
  154 |     printf("Matrix B
      |            ^~~~~~~~~
./samples/SAFE/__tmp_29a9b183.c:154:5: error: expected expression at end of input
  154 |     printf("Matrix B
      |     ^~~~~~
./samples/SAFE/__tmp_29a9b183.c:154:5: error: expected declaration or statement at end of input
